Corrected instructions, worked on form styling, added CSS3 prefixes for KHTML and IE (arguably unnecessary but just covering my bases) to mixins.less

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,6 +12,8 @@
 .border-radius (@radius: 10px) {
 	-moz-border-radius: @arguments;
 	-o-border-radius: @arguments;
+  -ms-border-radius: @arguments;
+  -khtml-border-radius: @arguments;
 	-webkit-border-radius: @arguments;
 	border-radius: @arguments;
 }
@@ -19,6 +21,8 @@
 .box-shadow (@x: 0, @y: 0, @blur: 5px, @color: #fff) {
   -o-box-shadow: @arguments;
   -moz-box-shadow: @arguments;
+  -ms-box-shadow: @arguments;
+  -khtml-box-shadow: @arguments;
   -webkit-box-shadow: @arguments;
   box-shadow: @arguments;
 }
@@ -26,6 +30,8 @@
 .inset-shadow (@inset: inset, @x: 0, @y: 0, @blur: 5px, @color: #fff) {
   -o-box-shadow: @arguments;
   -moz-box-shadow: @arguments;
+  -ms-box-shadow: @arguments;
+  -khtml-box-shadow: @arguments;
   -webkit-box-shadow: @arguments;
   box-shadow: @arguments;
 }
@@ -33,6 +39,8 @@
 .text-shadow (@x: 0, @y: 0, @blur: 1px, @color: #fff) {
   -o-text-shadow: @arguments;
   -moz-text-shadow: @arguments;
+  -ms-text-shadow: @arguments;
+  -khtml-text-shadow: @arguments;
   -webkit-text-shadow: @arguments;
   text-shadow: @arguments;
 }
